# fkvs

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  Makefile.fkvs  README.md  build.zig  client.c  client.conf  client.h  client_command_handlers.c  client_command_handlers.h  command_defs.h  command_handlers.c  command_handlers.h  command_parser.c  command_parser.h  command_registry.c  command_registry.h  config.c  config.h  event_dispatcher.h  event_dispatcher_epoll.c  event_dispatcher_kqueue.c  fkvs  fkvs-benchmark.c  fkvs-cli  fkvs-cli.c  fkvs-dump.rdb  hashtable.c  hashtable.h  list.c  list.h  logo.txt  main.h  (+11 more)
.cmake/api/v1/reply/: cache-v2-16ac81300bc6cf4ab631.json  cmakeFiles-v1-4689857f77802880795c.json  codemodel-v2-a66e2e12847734095e0b.json  index-2026-02-25T16-39-17-0837.json  target-fkvs-benchmark-53938c0084c6e2ecb3b6.json  target-fkvs-cli-617886c30e14966544c3.json  target-fkvs-server-0d5b04db86bf78d1fd4b.json  target-linenoise-28eacf3446774b26f831.json  target-test_counter-972d64bdef40b2472bc0.json  target-test_integration-daece43afb00c1a9600c.json  target-test_string_utils-0eb4376ab489f5395b96.json  toolchains-v1-793eee4a43525f9b03d9.json
.github/workflows/: cmake-multi-platform.yml
docs/: benchmarking.md  event-dispatchers.md  io-uring-findings.md  jemalloc.md  perf-hot-path-decisions.md  performance-roadmap.md  profiling.md  remote-benchmarking.md  scaling-to-4M-roadmap.md
scripts/: bench-sweep.sh
src/: client.c  client.h  config.c  config.h  counter.c  counter.h  fkvs-benchmark.c  fkvs-cli.c  fkvs_time.h  keygen.h  memory.c  memory.h  numeric_parse.c  numeric_parse.h  server.c  server.h  server_lifecycle.c  server_lifecycle.h  server_limits.c  server_limits.h  string_utils.c  string_utils.h  ttl.c  ttl.h  utils.h
src/commands/client/: client_command_handlers.c  client_command_handlers.h
src/commands/common/: command_defs.h  command_parser.c  command_parser.h  command_registry.c  command_registry.h  command_tokenizer.c  command_tokenizer.h
src/commands/server/: server_command_handlers.c  server_command_handlers.h
src/core/: hashtable.c  hashtable.h  list.c  list.h
src/io/: event_dispatcher.h  event_dispatcher_epoll.c  event_dispatcher_io_uring.c  event_dispatcher_kqueue.c
src/networking/: modes.h  networking.c  networking.h
src/persistence/: crc32.h  persistence.c  persistence.h
tests/: io_uring_smoke.py  test_client_response_handler.c  test_command_parser.c  test_command_tokenizer.c  test_counter.c  test_hashtable  test_hashtable.c  test_integration.c  test_invariant_fkvs-benchmark.c  test_persistence.c  test_response_writer.c  test_server_config.c  test_server_lifecycle.c  test_server_limits.c  test_string_utils.c
